infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: bins
  labels:
    app: server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
