infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  namespace: bins
  labels:
    app: server
spec:
  rules:
    - host: "bins.dfranklin.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port: { name: http }
  tls:
    - hosts:
        - "bins.dfranklin.dev"
      secretName: dfranklin-dev-cert
